# Project-z

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: ActivitySessionManager.cpp  ActivitySessionManager.h  AppVisibilityMonitor.cpp  AppVisibilityMonitor.h  ForegroundTracker.cpp  ForegroundTracker.h  SensitiveZoneManager.cpp  SensitiveZoneManager.h
src/gui/: MainWindow.cpp
